--- a/index.html
+++ b/index.html
@@ -150,9 +150,10 @@
                 <div class="col">
                   <div class="input-group">
                     <input
+                      oninput="searchInfoUser(event)"
                       type="text"
                       class="form-control"
-                      placeholder="Loại nhân viên"
+                      placeholder="Tìm kiếm theo tên nhân viên"
                       id="searchName"
                     />
                     <div class="input-group-prepend">
